PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Valid/ContainerExistsIndexAccess.pf
module ContainerExistsIndexAccess {

    a [Int] = [1,2,3]

    fun testSomething() : Int {

        i Int = a[2]
         
        return i
    }
}