PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/ImmutableGlobalVariable2.pf
module ImmutableGlobalVariable2 {

    i [Int] = [0]

    fun testSomething() : Int {
         i[0] = 0

        return i
    }
}